Add predict flu in predict api, add new dataset and data model, update swagger and use cases
