# models/Predict_model.py
@@ -34,12 +34,33 @@ print(predict_temp)
 print("-----------------------------------")
 """
 
-def predictWeather(climate, rain_model_, wind_model_, temp_model_):
+"""weather = [23.275, 0, 7.6, 0.3, 46.5, 19.75, 65.5, 1017.125, 7]
+col_name = ["temp_avg", "rainfall", "evaporation", "sunshine", "windGustSpeed", "windSpeed_avg", "humidity_avg",
+            "pressure_avg", "cloud_avg"]
+data = {col_name[i]: weather[i] for i in range(len(weather))}
+df_predict = pd.DataFrame(data, index=[0])
+df_predict.drop(['windGustSpeed', 'cloud_avg'], inplace=True, axis=1)
+model_flu = joblib.load("flu.model")
+predict_flu = model_flu.predict(df_predict)
+print("The temp of predict is")
+print(predict_flu)
+print("-----------------------------------")"""
+
+
+def predictWeather(climate, rain_model_, wind_model_, temp_model_, flu_model_):
     _df_predict = pd.DataFrame(climate, index=[0])
     result = dict()
     result['rain'] = rain_model_.predict(_df_predict)[0]
     result['wind'] = wind_model_.predict(_df_predict)[0]
     result['temp'] = temp_model_.predict(_df_predict)[0]
+    _df_predict.drop(['windGustSpeed', 'cloud_avg'], inplace=True, axis=1)
+    raw_chance = flu_model_.predict(_df_predict)[0]
+    msg = ''
+    if 0 <= raw_chance <= 10:
+        msg = 'Low'
+    elif 10 < raw_chance <= 20:
+        msg = 'Medium'
+    else:
+        msg = 'High'
+    result['flu'] = msg
     return result
-
-
